tests/outref/TOJ04.ref
SELECT * FROM names n1 LEFT JOIN (SELECT * FROM names WHERE firstName < 'Zero') n2;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected SEMICOLON
LINE 1:1: ...n1 LEFT JOIN (SELECT * FROM names WHERE firstName < 'Zero') n2;
                                                                           ^
